Wed Jan 11 14:36:43 UTC 2012  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw.h:
        * ace/os_include/os_signal.h:
          Changes to support MinGW64 compiler.

Mon Jan  9 11:07:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Netlink_Addr.h:
        * ace/Notification_Queue.h:
          Doxygen fixes

        * tests/run_test.lst:
          Removed several old config labels

Fri Jan  6 11:16:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/configuration.shtml:
        * html/Stats/index.shtml:
        * html/Stats/simple_footprint.shtml:
          Extended data to be shown and updated links

Fri Jan  6 10:28:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Stream.cpp:
          Fixed coverity errors

Wed Jan  4 13:02:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Added link for DAnCE

Wed Jan  4 11:45:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Fixed link

Wed Jan  4 11:42:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Work with flat layout and added DAnCE

Wed Jan  4 11:06:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_compile_stats.sh:
          Updated title to include DAnCE

Wed Jan  4 08:50:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/cleanbuilds.sh:
        * bin/mail_test_stats.sh:
          Accept date and email as arguments

Tue Jan  3 18:47:23 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
        * bin/topinfo_iorsize_stats.sh:
        * bin/topinfo_simple_stats.sh:
        * bin/topinfo_stats.sh:
          Assume ACE_ROOT is set before running the script, simplified the usage

Tue Jan  3 18:34:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/valgrind.supp: